<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homescreen"
    tools:context=".MainActivity2"
    android:padding="16dp">

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home Screen"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/gladifilthefte"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/groupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Groups"
        android:textSize="30sp"
        android:fontFamily="@font/shockwave"
        android:backgroundTint="#FF5722"
        app:layout_constraintTop_toBottomOf="@id/homeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Study Track"
        android:textSize="30sp"
        android:fontFamily="@font/shockwave"
        android:backgroundTint="#FF5722"
        app:layout_constraintTop_toBottomOf="@id/groupbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/studyBuddyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Study Buddy"
            android:textSize="30sp"
            android:fontFamily="@font/shockwave"
            android:backgroundTint="#FF5722"
            app:layout_constraintTop_toBottomOf="@id/historyBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/goBackbtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textSize="30sp"
        android:fontFamily="@font/shockwave"
        android:backgroundTint="#FF5722"
        app:layout_constraintTop_toBottomOf="@id/studyBuddyBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
