<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity2"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/mainpage"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login Page"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:textSize="60dp"
        android:fontFamily="@font/gladifilthefte"
        android:textColor="#FFFFFF">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UserName: "
            android:textSize="35dp"
            android:fontFamily="@font/gladifilthefte"
            android:textColor="#FBFBFB">
        </TextView>

        <EditText
            android:id="@+id/login_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#63B4AC"
            android:textColor="#FBFBFB"
            android:fontFamily="@font/caster"
            android:hint="Enter Username Here">
        </EditText>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password: "
            android:textSize="35dp"
            android:fontFamily="@font/gladifilthefte"
            android:textColor="#F8F5F5">
        </TextView>

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:background="#63B4AC"
            android:fontFamily="@font/caster"
            android:textColor="#FBFBFB"
            android:hint="Enter Password Here">
        </EditText>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/shockwave"
            android:text="Login"
            android:textColor="#ffffff"
            android:backgroundTint="#295954"
            android:textSize="20sp">
        </Button>

        <Button
            android:id="@+id/login_back_btn"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/shockwave"
            android:text="Back"
            android:textColor="#ffffff"
            android:backgroundTint="#295954"
            android:textSize="20sp">
        </Button>

    </LinearLayout>

    <Button android:id="@+id/login_reset_btn"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:backgroundTint="#295954"
        android:fontFamily="@font/shockwave"
        android:text="Reset Password" />





</androidx.appcompat.widget.LinearLayoutCompat>